[metadata]
# Vishwa.R:
name = PyBrainf_ck
version = 1.0.0
author = Vishwa.R
author_email = v.i.s.h.w.a.08.11.2001@gmail.com
description = A simple package which gives the brainfuck code for the passed Text.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/code-reaper08/PyBrainf_ck
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6